Fix table cutoff

--- a/src/style/tabling/index.scss
+++ b/src/style/tabling/index.scss
@@ -328,6 +328,12 @@
       }
     }
 
+    &.with-table-menu {
+      .grid--data {
+        max-height: calc(100% - 40px - 40px);
+      }
+    }
+
     .grid--table-footer {
       flex: none;
       height: 40px;
